--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   <header class="vista-window header">
     <div class="title-bar">
       <span class="title-icon">🌤</span>
-      
+      <span>Family Gathering 2025</span>
       <span class="window-buttons">◻ ✖</span>
     </div>
     <div class="window-body">
-      <p></p>
+      <p>Join us for good food!</p>
     </div>
   </header>
 
@@ -34,7 +34,6 @@
     <section class="vista-window">
       <div class="title-bar"><span>💌 Your Invitation</span></div>
       <div class="window-body">
-        
         <div class="button-wrap">
           <button id="inviteBtn"><span>Accept Invitation ✨</span></button>
         </div>
